Adding testing framework
Adding testing frameworks and renaming js files to jsx

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <title>LOLDB</title>
   </head>
   <body>
     <script src="index.js" type="text/babel"></script>
